# testing

my_solutions/Catch2_testing/Factorial_test/: CMakeLists.txt  factorial_test.cpp
my_solutions/Catch2_testing/Sort_test/: CMakeLists.txt  sort_test.cpp
my_solutions/Catch2_testing/Vector_test/: CMakeLists.txt
my_solutions/GTest_testing/Factorial_test/: CMakeLists.txt  factorial_test.cpp
my_solutions/GTest_testing/Sort_test/: CMakeLists.txt  sort_test.cpp
